# roguelike

./: .gitignore  Cargo.toml
src/: components.rs  gui.rs  main.rs  map.rs  map_builders.rs  player.rs  random_table.rs  rex_assets.rs  saveload_system.rs  spawner.rs  systems.rs
src/lib/: mod.rs
src/map_builders/: bsp_map.rs  common.rs  simple_map.rs
src/resources/: entrance.xp
src/systems/: damage_system.rs  hunger_system.rs  inventory_system.rs  map_indexing_system.rs  melee_combat_system.rs  monster_ai_system.rs  particle_system.rs  trigger_system.rs  visibility_system.rs
