[package]
name = "roguelike"
version = "0.1.0"
authors = ["Sebastian Luzynski <sebastian.luzynski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { version = "0.8.1", features = ["serde"] }
specs = { verison = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
